--- a/TheMessengerRandomizerTest/TheMessengerRandomizerTest.csproj
+++ b/TheMessengerRandomizerTest/TheMessengerRandomizerTest.csproj
@@ -21,6 +21,9 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>E:\Games\SteamLibrary\steamapps\common\The Messenger\TheMessenger_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="Assembly-CSharp-firstpass">
+      <HintPath>E:\Games\SteamLibrary\steamapps\common\The Messenger\TheMessenger_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+    </Reference>
     <Reference Include="MMHOOK_Assembly-CSharp">
       <HintPath>E:\Games\SteamLibrary\steamapps\common\The Messenger\TheMessenger_Data\Managed\MMHOOK_Assembly-CSharp.dll</HintPath>
     </Reference>
