--- a/MessengerRando.csproj
+++ b/MessengerRando.csproj
@@ -35,8 +35,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Archipelago.MultiClient.Net, Version=4.2.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Archipelago.MultiClient.Net.4.2.4\lib\net35\Archipelago.MultiClient.Net.dll</HintPath>
+    <Reference Include="Archipelago.MultiClient.Net, Version=4.2.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Archipelago.MultiClient.Net.4.2.5-betav5\lib\net35\Archipelago.MultiClient.Net.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\The Messenger\TheMessenger_Data\Managed\Assembly-CSharp.dll</HintPath>
@@ -59,7 +59,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Archipelago.MultiClient.Net.4.2.4\lib\net35\Newtonsoft.Json.dll</HintPath>
+      <HintPath>packages\Archipelago.MultiClient.Net.4.2.5-betav5\lib\net35\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\The Messenger\TheMessenger_Data\Managed\UnityEngine.dll</HintPath>
@@ -82,7 +82,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="websocket-sharp, Version=1.0.2.34775, Culture=neutral, PublicKeyToken=5660b08a1845a91e, processorArchitecture=MSIL">
-      <HintPath>packages\Archipelago.MultiClient.Net.4.2.4\lib\net35\websocket-sharp.dll</HintPath>
+      <HintPath>packages\Archipelago.MultiClient.Net.4.2.5-betav5\lib\net35\websocket-sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -102,6 +102,7 @@
     <Compile Include="RO\SeedRO.cs" />
     <Compile Include="RO\LocationRO.cs" />
     <Compile Include="Utils\RandoSave.cs" />
+    <Compile Include="Utils\LocationInfo.cs" />
     <Compile Include="Utils\SettingValue.cs" />
     <Compile Include="Utils\SettingType.cs" />
     <Compile Include="Utils\DialogChanger.cs" />
@@ -110,7 +111,7 @@
     <Compile Include="Utils\RandomizerStateManager.cs" />
     <Compile Include="Utils\RandomizerSaveMethod.cs" />
     <Compile Include="Utils\ItemRandomizerUtil.cs" />
-    <Compile Include="RandomizerMain.cs" />
+    <Compile Include="APRandomizerMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="courier.toml"><CopyToOutputDirectory>Always</CopyToOutputDirectory></Content>
   </ItemGroup>
