--- a/MessengerRando.csproj
+++ b/MessengerRando.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Utils\ItemRandomizerUtil.cs" />
     <Compile Include="APRandomizerMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\UserConfig.cs" />
     <Content Include="courier.toml"><CopyToOutputDirectory>Always</CopyToOutputDirectory></Content>
   </ItemGroup>
   <ItemGroup>
