--- a/MessengerRando.csproj
+++ b/MessengerRando.csproj
@@ -113,7 +113,12 @@
     <Compile Include="APRandomizerMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\UserConfig.cs" />
-    <Content Include="courier.toml"><CopyToOutputDirectory>Always</CopyToOutputDirectory></Content>
+    <Content Include="courier.toml"><CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory></Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="wspp\win64\**\*.*" Link="%(RecursiveDir)%(Filename)%(Extension)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
