fix more broken things - teleports, music, and lost woods

--- a/MessengerRando.csproj
+++ b/MessengerRando.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Archipelago\DeathLinkInterface.cs" />
     <Compile Include="Archipelago\ItemsAndLocationsHandler.cs" />
     <Compile Include="Exceptions\RandomizerException.cs" />
+    <Compile Include="GameOverrideManagers\LostWoodsManager.cs" />
     <Compile Include="GameOverrideManagers\RandoBossManager.cs" />
     <Compile Include="GameOverrideManagers\RandoMusicManager.cs" />
     <Compile Include="GameOverrideManagers\RandoPortalManager.cs" />
