--- a/MessengerRando.csproj
+++ b/MessengerRando.csproj
@@ -2,8 +2,7 @@
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <TargetFramework>net35</TargetFramework>
     <ProjectGuid>{6271B317-0737-489F-8319-67F0AC291D20}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -12,9 +11,9 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <Version>0.13.0</Version>
   </PropertyGroup>
+  
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
@@ -26,14 +25,19 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\TheMessengerRandomizerAP\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <OutputPath>bin\Release\net35\TheMessengerRandomizerAP\</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+
+  <Target Name="ZipMod" AfterTargets="PostBuildEvent" Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <ZipDirectory SourceDirectory="bin\Release\net35\"
+                  DestinationFile="bin\Release\TheMessengerRandomizerAP-$(Version).zip"
+                  Overwrite="true"/>
+  </Target>
+  
   <ItemGroup>
     <Reference Include="Archipelago.MultiClient.Net, Version=5.0.6.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Archipelago.MultiClient.Net.5.0.6\lib\net35\Archipelago.MultiClient.Net.dll</HintPath>
@@ -56,6 +60,10 @@
     </Reference>
     <Reference Include="MonoMod.Utils">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\The Messenger\TheMessenger_Data\Managed\MonoMod.Utils.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System">
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\The Messenger\TheMessenger_Data\Managed\System.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -85,12 +93,14 @@
       <HintPath>packages\Archipelago.MultiClient.Net.5.0.6\lib\net35\websocket-sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
+  
   <ItemGroup>
     <Compile Include="Archipelago\ArchipelagoClient.cs" />
     <Compile Include="Archipelago\ArchipelagoData.cs" />
     <Compile Include="Archipelago\DeathLinkInterface.cs" />
     <Compile Include="Archipelago\ItemsAndLocationsHandler.cs" />
     <Compile Include="Exceptions\RandomizerException.cs" />
+    <Compile Include="GameOverrideManagers\LostWoodsManager.cs" />
     <Compile Include="GameOverrideManagers\RandoBossManager.cs" />
     <Compile Include="GameOverrideManagers\RandoMusicManager.cs" />
     <Compile Include="GameOverrideManagers\RandoPortalManager.cs" />
@@ -102,11 +112,17 @@
     <Compile Include="Overrides\RandoCatacombLevelInitializer.cs" />
     <Compile Include="RO\RandoItemRO.cs" />
     <Compile Include="RO\LocationRO.cs" />
+    <Compile Include="Utils\OptionsExporter.cs" />
+    <Compile Include="Utils\SeedGenerator.cs" />
+    <Compile Include="Utils\HintMenu.cs" />
     <Compile Include="Utils\Constants\BossConstants.cs" />
     <Compile Include="Utils\Constants\LevelConstants.cs" />
     <Compile Include="Utils\Constants\RoomConstants.cs" />
+    <Compile Include="Utils\ArchipelagoMenu.cs" />
+    <Compile Include="Utils\RandoMenu.cs" />
+    <Compile Include="Utils\RandomizerOptions.cs" />
     <Compile Include="Utils\RandoSave.cs" />
-    <Compile Include="Utils\LocationInfo.cs" />
+    <Compile Include="Utils\NetworkItemExtensions.cs" />
     <Compile Include="Utils\DialogChanger.cs" />
     <Compile Include="Utils\RandomizerConstants.cs" />
     <Compile Include="Utils\RandomizerStateManager.cs" />
@@ -119,6 +135,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
