--- a/MessengerRando.csproj
+++ b/MessengerRando.csproj
@@ -40,9 +40,6 @@
   </Target>
   
   <ItemGroup>
-    <Reference Include="Archipelago.MultiClient.Net">
-      <HintPath>..\Archipelago.MultiClient.Net\Archipelago.MultiClient.Net\bin\Release\net35\Archipelago.MultiClient.Net.dll</HintPath>
-    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\The Messenger\TheMessenger_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
@@ -62,9 +59,6 @@
     <Reference Include="MonoMod.Utils">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\The Messenger\TheMessenger_Data\Managed\MonoMod.Utils.dll</HintPath>
       <Private>False</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\Archipelago.MultiClient.Net\Archipelago.MultiClient.Net\bin\Release\net35\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\The Messenger\TheMessenger_Data\Managed\System.dll</HintPath>
@@ -89,9 +83,6 @@
     <Reference Include="UnityEngine.UIModule">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\The Messenger\TheMessenger_Data\Managed\UnityEngine.UIModule.dll</HintPath>
       <Private>False</Private>
-    </Reference>
-    <Reference Include="websocket-sharp">
-      <HintPath>..\Archipelago.MultiClient.Net\Archipelago.MultiClient.Net\bin\Release\net35\websocket-sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
   
@@ -146,7 +137,7 @@
   </ItemGroup>
   
   <ItemGroup>
-<!--    <PackageReference Include="Archipelago.MultiClient.Net" Version="6.5.0" />-->
+    <PackageReference Include="Archipelago.MultiClient.Net" Version="6.6.0" />
     <PackageReference Include="Archipelago.MultiClient.Net.Analyzers" Version="1.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
